feat: rewrite the login auth system
